# taxprep_hackathon

./: .gitignore  Makefile  PLAN.md  README.md  docker-compose.yml
.cursor/rules/: coding-standard.mdc
backend/: README.md  env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: health.py
backend/app/core/: config.py  logging.py
backend/taxgpt_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_health.py
docs/: AGENT_PLAYBOOK.md  CODING_STANDARDS.md  REPO_STRUCTURE.md
frontend/: .eslintrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.base.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.test.tsx  App.tsx
frontend/src/app/providers/: app-providers.tsx  theme-provider.tsx
frontend/src/components/documents/: DocumentDetail.tsx  DocumentList.tsx  DocumentModal.tsx  DocumentUpload.tsx
frontend/src/components/layout/: ThreePanelLayout.tsx  WorkspaceShell.tsx
frontend/src/features/documents/components/: DocumentList.tsx
frontend/src/features/documents/pages/: DashboardPage.tsx
frontend/src/features/workpapers/components/: ConversationPanel.tsx  ReturnSummaryPanel.tsx
frontend/src/features/workpapers/pages/: CaseWorkspacePage.tsx
frontend/src/lib/api/: client.ts  documents.ts  types.ts
frontend/src/lib/hooks/: useApiHealth.ts  useDocuments.ts
frontend/src/styles/: global.css
infrastructure/docker/: backend.Dockerfile  frontend.Dockerfile
